styles/index.scss
$color1: #efefef;
$color2: #e4e4e4;
$color3: #c4c4c4;
$navheight: 79px;

html,
body {
  font-family: "Source Sans Pro";
  font-size: 16px;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
}

* {
  box-sizing: content-box;
}

img {
  // position: absolute;
  max-width: 100%;
}
/*===========
  Topography
  ===========*/

.bold {
  font-weight: bold;
}

.grey {
  color: gray;
}
.h1 {
  font-size: 56px;
}

.h2 {
  font-size: 48px;
}

.h3 {
  font-size: 36px;
}

.h4 {
  font-size: 28px;
}

.t {
  font-size: 24px;
}

.st {
  font-size: 18px;
}

caption {
  font-size: 14px;
}

/*===========
  Templates
  ===========*/

.visible {
  display: none;
}

%div.section {
  margin: 2em 0;
  display: flex;
  flex-direction: column;
}

/*===========
  Classes
  ===========*/

div.nav {
  width: 100%;
  height: $navheight;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: auto;
  text-align: center;
  z-index: 1;
}

div.hambutton {
  display: none;
  margin: 1em;
}

div.navbuttons {
  flex-direction: row;
  display: flex;
  align-items: center;
  margin-right: 1em;
  a {
    padding: 1em 1.5em;
    color: inherit;
    text-decoration: none;
    width: max-content;
    text-align: center;
    white-space: nowrap;
  }

  a:hover {
    text-decoration: underline;
  }
  a.active {
    text-decoration: underline;
  }
}

div.main {
  @extend %div.section;
  width: 85vw;
  text-align: left;
  align-content: center;
  margin-bottom: 5em;
  margin: auto;
}

@media (max-width: 992px) {
  div.nav {
    flex-direction: column;
    position: fixed;
    background: white;
  }
  div.hambutton {
    display: initial;
  }
  div.navbuttons {
    display: none;
    flex-direction: column;
    align-items: center;

    a {
      width: 100%;
      background: white;
      border-top-width: 1px;
      border-bottom-width: 1px;
      // border-color: grey;
    }
  }

  div.main {
    padding-top: $navheight;
  }
}
div.landingpage {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

a.resume {
  width: max-content;
  display: flex;
  flex-direction: row;
  border-radius: 60px;
  text-align: center;
  color: white;
  background: #e34646;
  margin-right: 1em;
  padding: 1em 2em;
  text-decoration: none;
}

a.resume:hover {
  background: #d52020;
  // cursor: context-menu;
}
a.linkedin {
  width: 42px;
  height: 42px;
}

div.mainimg {
  display: flex;
  flex-direction: column;
  margin-top: 2.5em;
  img {
    max-height: 550px;
    // width: 100%;
  }
  // margin: 0 3em;
}

@media (max-width: 992px) {
  div.landingpage {
    flex-direction: column;
    text.h1 {
      font-size: 36px;
    }
  }
}

div.whoiam {
  display: flex;
  flex-direction: row;
  width: 100%;
  margin-top: 8em;
  margin-bottom: 4em;
  justify-content: center;
  align-items: center;

  text.title {
    width: auto;
    margin-right: auto;
  }
  p.content {
    justify-self: center;
    align-self: center;
    margin-right: auto;
    max-width: 543px;
  }
}

@media (max-width: 992px) {
  div.whoiam {
    flex-direction: column;
  }
}

div.skills {
  @extend %div.section;
  align-items: center;
  justify-content: center;
}

div.skillcards {
  margin: 2em 0;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 36px;
  justify-content: space-between;
  flex-direction: row;
}

@media (max-width: 992px) {
  div.skillcards {
    grid-template-columns: 1fr;
    max-width: 500px;
    // grid-row-gap: 36px;
  }
}

div.project {
  @extend %div.section;
  align-items: center;
}

div.projects {
  position: relative;
  display: grid;
  grid-template-columns: 1fr 1fr;
  // grid-gap: 32px;
  grid-row-gap: 32px;
  grid-column-gap: 64px;
  margin: 2em 0;
  max-width: 1146px;
}

@media (max-width: 992px) {
  div.projects {
    grid-template-columns: 1fr;
    max-width: 500px;
  }
}

div.contact {
  @extend %div.section;
  width: 100%;
  align-items: center;
}

div.emailbox {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  margin: 2em;
  height: 118px;
  // box-shadow: 0 0px 20px 0 rgba(64, 64, 64, 0.2);
  box-shadow: 0px 0px 20px 0px rgba(64, 64, 64, 0.2);
  width: 95%;
}

@media (max-width: 450px) {
  div.emailbox {
    text.email {
      font-size: 24px;
    }
  }
}

@media (max-width: 390px) {
  div.emailbox {
    text.email {
      font-size: 20px;
    }
    text.st {
      font-size: 16px;
    }
  }
}
// label.inputlabel {
//   text-align: left;
//   margin: 100em;
// }

// div.single {
//   padding: 0px;
//   margin-top: 1.5em;
// }

// img.caret {
//   width: 256px;
//   left: 1430px;
//   top: 1400px;
// }

